3.9.0/_sources/gallery/axisartist/index.rst.txt


.. _sphx_glr_gallery_axisartist:

.. _axis_artist_examples:

.. _axisartist-examples-index:

Module - axisartist
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Axis Direction">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_axis_direction_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_axis_direction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Axis Direction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="axis_direction demo">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_axis_direction_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_axis_direction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">axis_direction demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows some configurations for axis style.">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_axisline_style_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_axisline_style.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Axis line styles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Custom grid and ticklines.">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_curvelinear_grid_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_curvelinear_grid.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Curvilinear grid demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Custom grid and ticklines.">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_curvelinear_grid2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_curvelinear_grid2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Demo CurveLinear Grid2</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstration of features of the .floating_axes module:">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_floating_axes_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_floating_axes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">floating_axes features</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Axis within rectangular frame.">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_floating_axis_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_floating_axis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">floating_axis demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a parasite Axes. Such Axes would share the x scale with a host Axes, but show a differen...">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_parasite_axes_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_parasite_axes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parasite Axes demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of parasite axis to plot multiple datasets onto one single pl...">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_parasite_axes2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_parasite_axes2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parasite axis demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ticklabel alignment">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_ticklabel_alignment_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_ticklabel_alignment.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ticklabel alignment</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ticklabel direction">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_demo_ticklabel_direction_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_demo_ticklabel_direction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ticklabel direction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple axis direction">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axis_direction01_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axis_direction01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple axis direction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="First subplot moves the tick labels to inside the spines. Second subplot moves the ticks to ins...">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axis_direction03_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axis_direction03.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple axis tick label and tick directions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Axis Pad">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axis_pad_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axis_pad.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Axis Pad</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example showcases the use of .axisartist to draw spines at custom positions (here, at y = ...">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axisartist1_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axisartist1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom spines with axisartist</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Axisline">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axisline_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axisline.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Axisline</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple Axisline3">

.. only:: html

  .. image:: /gallery/axisartist/images/thumb/sphx_glr_simple_axisline3_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_axisartist_simple_axisline3.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Axisline3</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/axisartist/axis_direction
   /gallery/axisartist/demo_axis_direction
   /gallery/axisartist/demo_axisline_style
   /gallery/axisartist/demo_curvelinear_grid
   /gallery/axisartist/demo_curvelinear_grid2
   /gallery/axisartist/demo_floating_axes
   /gallery/axisartist/demo_floating_axis
   /gallery/axisartist/demo_parasite_axes
   /gallery/axisartist/demo_parasite_axes2
   /gallery/axisartist/demo_ticklabel_alignment
   /gallery/axisartist/demo_ticklabel_direction
   /gallery/axisartist/simple_axis_direction01
   /gallery/axisartist/simple_axis_direction03
   /gallery/axisartist/simple_axis_pad
   /gallery/axisartist/simple_axisartist1
   /gallery/axisartist/simple_axisline
   /gallery/axisartist/simple_axisline3

